# loadso

./: CMakeLists.txt  README.md  loadsoConfig.cmake.in
cmake/: plugin.cmake
include/loadso/: library.h  loadso_global.h  pluginloader.h  system.h
src/: library.cpp  library_p.h  pluginloader.cpp  pluginloader_p.h  system.cpp
tests/: CMakeLists.txt
tests/dll/: CMakeLists.txt  dll.h
tests/exe/: CMakeLists.txt  main.cpp
tests/plugins/: CMakeLists.txt  interface.h  loader.cpp  plugin1.cpp  plugin1.h  plugin1.txt  plugin2.cpp  plugin2.txt
